Organized file structure

--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
     <nav>
         <div id="nav-header">
             <h1>Nicholas Weber</h1>
-            <img id="profile-img" src="profile.png" />
+            <img id="profile-img" src="assets/profile.png" />
             <span>UX &amp; Front-End Web Developer</span>
         </div>
         <div id="nav-info">
             <a href="tel:7632185996">
-                <img src="phone.png" />
+                <img src="assets/phone.png" />
             </a>
             <a href="https://www.linkedin.com/in/nicholas-weber-29695a175/">
-                <img src="linkedin.png" />
+                <img src="assets/linkedin.png" />
             </a>
             <a href="mailto:nikko@nikkoweber.com">
-                <img src="mail.png" />
+                <img src="assets/mail.png" />
             </a>
         </div>
     </nav>
