Added resume button

--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
                 <img src="assets/mail.png" />
             </a>
         </div>
+        <button onclick="window.location.href='assets/resume.pdf'">Resumé</button>
     </nav>
     <main>
-        Hello
+        <h1>Select a portfolio item to learn more.</h1>
     </main>
     <script src="js/scripts.js"></script>
 </body>
