Added under construction message

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <button onclick="window.location.href='assets/resume.pdf'">Resumé</button>
     </nav>
     <main>
-        <h1>Select a portfolio item to learn more.</h1>
+        <h1>Portfolio is currently under construction. Examples of previous work are available at request.</h1>
     </main>
     <script src="js/scripts.js"></script>
 </body>
