Added resume download

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
                 <img src="assets/mail.png" />
             </a>
         </div>
-        <button onclick="window.location.href='assets/resume.pdf'">Resumé</button>
+        <a href="assets/Resume.pdf" download>
+            <button>Resumé</button>
+        </a>
     </nav>
     <main>
         <h1>Portfolio is currently under construction. Examples of previous work are available at request.</h1>
