--- a/index.html
+++ b/index.html
@@ -31,9 +31,20 @@
         </a>
     </nav>
     <main>
-        <h1>Portfolio is currently under construction. Examples of previous work are available at request.</h1>
+        <h1>Select a portfolio item to see more detail.</h1>
+        <div id="items">
+            <a onclick="openOverlay1()">
+                <img src="assets/lubetech-v2.png" />
+                <span>Lube-Tech V2</span>
+            </a>
+            <!-- <a>
+                <img src="assets/auto-co.png" />
+                <span>College Web Design Project</span>
+            </a> -->
+        </div>
     </main>
-    <script src="js/scripts.js"></script>
+    <div id="overlay"></div>
+    <script src="scripts.js"></script>
 </body>
 
 </html>
