Added first portfolio item

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Nikko Weber - UX Developer">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="home.css">
 </head>
 
 <body>
@@ -34,7 +35,7 @@
         <h1>Select a portfolio item to see more detail.</h1>
         <div id="items">
             <a onclick="openOverlay1()">
-                <img src="assets/lubetech-v2.png" />
+                <img src="assets/lubetech-v2/home.png" />
                 <span>Lube-Tech V2</span>
             </a>
             <!-- <a>
