--- a/lubetech-v2.html
+++ b/lubetech-v2.html
@@ -11,7 +11,7 @@
     <main>
         <div>
             <h1>Lube-Tech V2</h1>
-            <a href="lubetech.com">lubetech.com</a>
+            <a href="https://lubetech.com/home">lubetech.com</a>
             <p>
                 Lube-Tech V2 was the first enterprise-level web application that I ever worked on professionally. It was
                 designed mostly by me, with occasional guidelines and assets provided by marketing and corporate. The
@@ -37,35 +37,6 @@
             <img src="assets/lubetech-v2/shop.png" />
             <img src="assets/lubetech-v2/shop-mobile.png" />
         </div>
-        <!-- <div id="information">
-            <h1>Lube-Tech V2</h1>
-            <a href="lubetech.com">lubetech.com</a>
-            <p>
-                Lube-Tech V2 was the first enterprise-level web application that I ever worked on professionally. It was
-                designed mostly by me, with occasional guidelines and assets provided by marketing and corporate. The
-                site
-                features extensive marketing materials and articles, as well as an eCommerce portion.
-            </p>
-            <p>
-                A shining example of mobile-first design and development philosophy, the entire application has been
-                engineered to be aesthetically and functionally pleasant on devices of all screen sizes. It was built in
-                Angular 2+ and uses lazy-loaded components as faux "pages."
-            </p>
-            <span>
-                <img src="assets/lubetech-v2/home.png" />
-                <img src="assets/lubetech-v2/home-mobile.png" />
-            </span>
-        </div>
-        <div id="screenshots">
-            <span>
-                <img src="assets/lubetech-v2/product.png" />
-                <img src="assets/lubetech-v2/product-mobile.png" />
-            </span>
-            <span>
-                <img src="assets/lubetech-v2/shop.png" />
-                <img src="assets/lubetech-v2/shop-mobile.png" />
-            </span>
-        </div> -->
     </main>
 </body>
 
