Set lubetech link to open in new window

--- a/lubetech-v2.html
+++ b/lubetech-v2.html
@@ -11,7 +11,7 @@
     <main>
         <div>
             <h1>Lube-Tech V2</h1>
-            <a href="https://lubetech.com/home">lubetech.com</a>
+            <a href="https://lubetech.com/home" target="_blank">lubetech.com</a>
             <p>
                 Lube-Tech V2 was the first enterprise-level web application that I ever worked on professionally. It was
                 designed mostly by me, with occasional guidelines and assets provided by marketing and corporate. The
