--- a/lubetech-v2.html
+++ b/lubetech-v2.html
@@ -14,16 +14,20 @@
             <a href="https://lubetech.com/home" target="_blank">lubetech.com</a>
             <p>
                 Lube-Tech V2 was the first enterprise-level web application that I ever worked on professionally. It was
-                designed mostly by me, with occasional guidelines and assets provided by marketing and corporate. The
-                site
-                features extensive marketing materials and articles, as well as an eCommerce portion.
-                A shining example of mobile-first design and development philosophy, the entire application has been
-                engineered to be aesthetically and functionally pleasant on devices of all screen sizes. It was built in
-                Angular 2+ and uses lazy-loaded components as faux "pages."
+                built in Angular 2+ and uses lazy-loaded components as faux "pages."
             </p>
-            <span>
-
-            </span>
+            <ul>
+                <li>In charge of UX design, with input from corporate and marketing</li>
+                <li>Each page includes its own SCSS file with a further hierarchy of SCSS above it</li>
+                <li>CSS Flexbox used extensively for both complex layouts and responsiveness</li>
+                <li>Built a stylish, horizontally-oriented navigation system with multiple columns and subheaders</li>
+                <li>Created a custom HTML5/CSS accordion to make pages more readable</li>
+                <li>Responsible for the decision to use a monochromatic palette, in addition to Lube-Tech's signature color</li>
+                <li>In charge of SEO for marketing pages</li>
+                <li>Integrated a Google Font similar to the company's official marketing font (Titillium Web)</li>
+                <li>Became comfortable with using Git as a team</li>
+                <li>Continues to work with marketing to integrate large and small enhancements</li>
+            </ul>
         </div>
         <div>
             <img src="assets/lubetech-v2/home.png" />
