--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>nikkoweber.com</title>
+    <title>Nikko Weber</title>
     <meta name="description" content="Nikko Weber - UX Developer">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
