--- a/lubetech-v2.html
+++ b/lubetech-v2.html
@@ -13,8 +13,9 @@
             <h1>Lube-Tech V2</h1>
             <a href="https://lubetech.com/home" target="_blank">lubetech.com</a>
             <p>
-                Lube-Tech V2 was the first enterprise-level web application that I ever worked on professionally. It was
-                built in Angular 2+ and uses lazy-loaded components as faux "pages."
+                Lube-Tech V2 was the first enterprise-level web application that I ever worked on professionally.
+                It contains both a marketing and eCommerce portion and was built in Angular 2+ and uses lazy-loaded 
+                components as faux "pages."
             </p>
             <ul>
                 <li>In charge of UX design, with input from corporate and marketing</li>
@@ -22,11 +23,12 @@
                 <li>CSS Flexbox used extensively for both complex layouts and responsiveness</li>
                 <li>Built a stylish, horizontally-oriented navigation system with multiple columns and subheaders</li>
                 <li>Created a custom HTML5/CSS accordion to make pages more readable</li>
-                <li>Responsible for the decision to use a monochromatic palette, in addition to Lube-Tech's signature color</li>
+                <li>Responsible for the decision to use a monochromatic palette, in addition to Lube-Tech's signature
+                    color</li>
                 <li>In charge of SEO for marketing pages</li>
                 <li>Integrated a Google Font similar to the company's official marketing font (Titillium Web)</li>
                 <li>Became comfortable with using Git as a team</li>
-                <li>Continues to work with marketing to integrate large and small enhancements</li>
+                <li>Continued to work with marketing to integrate large and small enhancements</li>
             </ul>
         </div>
         <div>
