Fixed grammatical error on Lube-Tech page

--- a/lubetech-v2.html
+++ b/lubetech-v2.html
@@ -14,7 +14,7 @@
             <a href="https://lubetech.com/home" target="_blank">lubetech.com</a>
             <p>
                 Lube-Tech V2 was the first enterprise-level web application that I ever worked on professionally.
-                It contains both a marketing and eCommerce portion and was built in Angular 2+ and uses lazy-loaded 
+                It contains both a marketing and eCommerce portion, was built in Angular 2+, and uses lazy-loaded 
                 components as faux "pages."
             </p>
             <ul>
