--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Nikko Weber</title>
-    <meta name="description" content="Nikko Weber - UX Developer">
+    <meta name="description" content="Nikko Weber - UX & Front-End Web Developer">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="home.css">
