--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 <body>
     <nav>
-        <div id="nav-header">
+        <header>
             <h1>Nicholas Weber</h1>
-            <img id="profile-img" src="assets/profile.png" />
+            <img src="assets/profile.png" />
             <span>UX &amp; Front-End Web Developer</span>
-        </div>
+        </header>
         <div id="nav-info">
             <a href="tel:7632185996">
                 <img src="assets/phone.png" />
