--- a/lubetech-v2.html
+++ b/lubetech-v2.html
@@ -9,7 +9,7 @@
 
 <body>
     <main>
-        <div>
+        <section class="site-info">
             <h1>Lube-Tech V2</h1>
             <a href="https://lubetech.com/home" target="_blank">lubetech.com</a>
             <p>
@@ -30,19 +30,21 @@
                 <li>Became comfortable with using Git as a team</li>
                 <li>Continued to work with marketing to integrate large and small enhancements</li>
             </ul>
-        </div>
-        <div>
-            <img src="assets/lubetech-v2/home.png" />
-            <img src="assets/lubetech-v2/home-mobile.png" />
-        </div>
-        <div>
-            <img src="assets/lubetech-v2/product.png" />
-            <img src="assets/lubetech-v2/product-mobile.png" />
-        </div>
-        <div>
-            <img src="assets/lubetech-v2/shop.png" />
-            <img src="assets/lubetech-v2/shop-mobile.png" />
-        </div>
+        </section>
+        <section class="images">
+            <div>
+                <img src="assets/lubetech-v2/home.png" />
+                <img src="assets/lubetech-v2/home-mobile.png" />
+            </div>
+            <div>
+                <img src="assets/lubetech-v2/product.png" />
+                <img src="assets/lubetech-v2/product-mobile.png" />
+            </div>
+            <div>
+                <img src="assets/lubetech-v2/shop.png" />
+                <img src="assets/lubetech-v2/shop-mobile.png" />
+            </div>
+        </section>
     </main>
 </body>
 
