Added bar cribbage

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
                 <img src="assets/lubetech-v2/home.png" />
                 <span>Lube-Tech V2</span>
             </a>
+            <a onclick="openOverlay2()">
+                <img src="assets/bar-cribbage/turn-fullwidth.png" />
+                <span>Bar Cribbage</span>
+            </a>
         </div>
     </main>
     <div id="overlay"></div>
