Changed bar cribbage

--- a/bar-cribbage.html
+++ b/bar-cribbage.html
@@ -15,7 +15,7 @@
             <p>
                 Bar Cribbage is a traditional family game, which is a modification of Cribbage. My father, as a coding
                 exercise, decided to recreate the game as a web application using Angular. I designed and developed the
-                "front end", giving the game its signature appearance. This app uses Google Firebase for authentication
+                "front end," giving the game its signature appearance. This app uses Google Firebase for authentication
                 and user setting management, although I was not involved in the implementation of these features or any
                 of the game's functionality, outside of UI considerations.
             </p>
