Changed home item images

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <nav>
         <header>
-            <h1>Nicholas Weber</h1>
+            <h1>Nikko Weber</h1>
             <img src="assets/profile.png" />
             <span>UX &amp; Front-End Web Developer</span>
         </header>
@@ -34,12 +34,12 @@
     <main>
         <h1>Select a portfolio item to see more detail.</h1>
         <div id="items">
-            <a onclick="openOverlay1()">
+            <a onclick="openLubeTechV2()">
                 <img src="assets/lubetech-v2/home.png" />
                 <span>Lube-Tech V2</span>
             </a>
-            <a onclick="openOverlay2()">
-                <img src="assets/bar-cribbage/rules-desktop.png" />
+            <a onclick="openBarCribbage()">
+                <img src="assets/bar-cribbage/turn-desktop.png" />
                 <span>Bar Cribbage</span>
             </a>
         </div>
