Made CSS changes

--- a/bar-cribbage.html
+++ b/bar-cribbage.html
@@ -26,7 +26,7 @@
                 <li>Created pages for logging in and managing user settings; will be used for multiplayer features</li>
             </ul>
         </section>
-        <section class="images-mobile">
+        <section class="images images-mobile">
             <img src="assets/bar-cribbage/turn.png" />
             <img src="assets/bar-cribbage/rules.png" />
             <img src="assets/bar-cribbage/login.png" />
