Fixed a lot of stuff

--- a/lubetech-v2.html
+++ b/lubetech-v2.html
@@ -18,17 +18,36 @@
                 components as faux "pages."
             </p>
             <ul>
-                <li>In charge of UX design, with input from corporate and marketing</li>
-                <li>Each page includes its own SCSS file with a further hierarchy of SCSS above it</li>
-                <li>CSS Flexbox used extensively for both complex layouts and responsiveness</li>
-                <li>Built a stylish, horizontally-oriented navigation system with multiple columns and subheaders</li>
-                <li>Created a custom HTML5/CSS accordion to make pages more readable</li>
-                <li>Responsible for the decision to use a monochromatic palette, in addition to Lube-Tech's signature
-                    color</li>
-                <li>In charge of SEO for marketing pages</li>
-                <li>Integrated a Google Font similar to the company's official marketing font (Titillium Web)</li>
-                <li>Became comfortable with using Git as a team</li>
-                <li>Continued to work with marketing to integrate large and small enhancements</li>
+                <li>
+                    In charge of UX design, with input from corporate and marketing
+                </li>
+                <li>
+                    Each page includes its own SCSS file with a further hierarchy of SCSS above it
+                </li>
+                <li>
+                    CSS Flexbox used extensively for both complex layouts and responsiveness
+                </li>
+                <li>
+                    Built a stylish, horizontally-oriented navigation system with multiple columns and subheaders</li>
+                <li>Created a custom HTML5/CSS accordion to make pages more readable
+
+                </li>
+                <li>
+                    Responsible for the decision to use a monochromatic palette, in addition to Lube-Tech's signature
+                    color
+                </li>
+                <li>
+                    In charge of SEO for marketing pages
+                </li>
+                <li>
+                    Integrated a Google Font similar to the company's official marketing font (Titillium Web)
+                </li>
+                <li>
+                    Became comfortable with using Git as a team
+                </li>
+                <li>
+                    Continued to work with marketing to integrate large and small enhancements
+                </li>
             </ul>
         </section>
         <section class="images">
