Created responsive view for overlays

--- a/bar-cribbage.html
+++ b/bar-cribbage.html
@@ -20,16 +20,26 @@
                 of the game's functionality, outside of UI considerations.
             </p>
             <ul>
-                <li>Created a uniform style for text, menus, buttons</li>
-                <li>Designed a splash page containing the rules</li>
-                <li>Implemented an easy-to-understand interface containing turns, hands, and scoring</li>
-                <li>Created pages for logging in and managing user settings; will be used for multiplayer features</li>
+                <li>
+                    Created a uniform style for text, menus, buttons
+                </li>
+                <li>
+                    Designed a splash page containing the rules
+                </li>
+                <li>
+                    Implemented an easy-to-understand interface containing turns, hands, and scoring
+                </li>
+                <li>
+                    Created pages for logging in and managing user settings; will be used for multiplayer features
+                </li>
             </ul>
         </section>
-        <section class="images images-mobile">
-            <img src="assets/bar-cribbage/turn.png" />
-            <img src="assets/bar-cribbage/rules.png" />
-            <img src="assets/bar-cribbage/login.png" />
+        <section class="images mobile-only">
+            <div class="mobile">
+                <img src="assets/bar-cribbage/turn.png" />
+                <img src="assets/bar-cribbage/rules.png" />
+                <img src="assets/bar-cribbage/login.png" />
+            </div>
         </section>
     </main>
 </body>
