--- a/lubetech-v2.html
+++ b/lubetech-v2.html
@@ -28,9 +28,10 @@
                     CSS Flexbox used extensively for both complex layouts and responsiveness
                 </li>
                 <li>
-                    Built a stylish, horizontally-oriented navigation system with multiple columns and subheaders</li>
-                <li>Created a custom HTML5/CSS accordion to make pages more readable
-
+                    Built a stylish, horizontally-oriented navigation system with multiple columns and subheaders
+                </li>
+                <li>
+                    Created a custom HTML5/CSS accordion to make pages more readable
                 </li>
                 <li>
                     Responsible for the decision to use a monochromatic palette, in addition to Lube-Tech's signature
@@ -50,17 +51,15 @@
                 </li>
             </ul>
         </section>
-        <section class="images">
-            <div>
+        <section class="images desktop-mobile">
+            <div class="desktop">
                 <img src="assets/lubetech-v2/home.png" />
-                <img src="assets/lubetech-v2/home-mobile.png" />
-            </div>
-            <div>
                 <img src="assets/lubetech-v2/product.png" />
-                <img src="assets/lubetech-v2/product-mobile.png" />
-            </div>
-            <div>
                 <img src="assets/lubetech-v2/shop.png" />
+            </div>
+            <div class="mobile">
+                <img src="assets/lubetech-v2/home-mobile.png" />
+                <img src="assets/lubetech-v2/product-mobile.png" />
                 <img src="assets/lubetech-v2/shop-mobile.png" />
             </div>
         </section>
