Changed email address

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="https://www.linkedin.com/in/nicholas-weber-29695a175/">
                 <img src="assets/linkedin.png" />
             </a>
-            <a href="mailto:nikko@nikkoweber.com">
+            <a href="mailto:nikkoweber@live.com">
                 <img src="assets/mail.png" />
             </a>
         </div>
