--- a/lubetech-v2.html
+++ b/lubetech-v2.html
@@ -14,14 +14,14 @@
             <p>
                 Lube-Tech V2 was the first enterprise-level web application that I ever worked on professionally.
                 It contains both a marketing and eCommerce portion, was built in Angular 2+, and uses lazy-loaded 
-                components as faux "pages."
+                components as faux "pages." It has since been replaced with a new WordPress site.
             </p>
             <ul>
                 <li>
                     In charge of UX design, with input from corporate and marketing
                 </li>
                 <li>
-                    Each page includes its own SCSS file with a further hierarchy of SCSS above it
+                    Each page included its own SCSS file with a further hierarchy of SCSS above it
                 </li>
                 <li>
                     CSS Flexbox used extensively for both complex layouts and responsiveness
