Fixed old contact info

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
             <span>UX &amp; Front-End Web Developer</span>
         </header>
         <div id="nav-info">
-            <a href="tel:6122952668">
+            <a href="tel:7632185996">
                 <img src="assets/phone.png" />
             </a>
             <a href="https://www.linkedin.com/in/nicholas-weber-29695a175/">
                 <img src="assets/linkedin.png" />
             </a>
-            <a href="mailto:nikkoweber@live.com">
+            <a href="mailto:nikkoweber@icloud.com">
                 <img src="assets/mail.png" />
             </a>
         </div>
